# courses_claude_code

./: CLAUDE.md  README.md
.claude/agents/: backend.md  frontend.md
.cursor/rules/: fastapi.mdc
Backend/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
Backend/app/: README_MIGRATIONS.md  TESTING_README.md  alembic.ini  main.py  test_main.py
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 331981aea222_add_course_ratings_table.py  d18a08253457_create_initial_database_schema_with_.py
Backend/app/core/: config.py
Backend/app/db/: base.py  migrations_commands.md  seed.py
Backend/app/models/: __init__.py  base.py  class.py  course.py  course_rating.py  course_teacher.py  lesson.py  teacher.py
Backend/app/schemas/: rating.py
Backend/app/services/: __init__.py  course_service.py
Backend/app/tests/: test_course_rating_service.py  test_rating_db_constraints.py  test_rating_endpoints.py
Backend/specs/: 00_contracts.md  01_setup.md
Frontend/: next.config.ts  package.json  vitest.config.ts
Frontend/.cursor/rules/: components-guide.mdc  project-stack.mdc  scss-conventions.mdc  unit-testing-guidelines.mdc
Frontend/docs/: curso-react-reproductor-video.feature
Frontend/src/app/: layout.tsx  page.module.scss  page.tsx
Frontend/src/services/: ratingsApi.ts
Frontend/src/styles/: reset.scss  vars.scss
Mobile/PlatziFlixAndroid/: README_COURSES_FEATURE.md  settings.gradle.kts
Mobile/PlatziFlixiOS/: buildServer.json
spec/: 01_sistema_de_ratings.md  02_backend_ratings_plan.md  03_frontend_ratings_plan.md
(+90 files in other folders)
